# mouseterm

./: .gitignore  .impeccable.md  AGENTS.md  CHANGELOG.md  README.md  TODO.md  homepage.md  install_skills.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json
.claude/commands/: release-notes.md
.github/workflows/: chromatic.yml  ci.yml  publish-vscode.yml  release.yml
docs/plans/: mouse-and-clipboard-plan.md
docs/specs/: TODO.md  alarm.md  alert.md  auto-update.md  deploy.md  layout.md  mouse-and-clipboard.md  ontology.md  shortcuts.md  theme.md  tutorial.md  vscode.md
lib/: clipboard-ops.cjs  index.html  package.json  pnpm-lock.yaml  pty-core.cjs  tsconfig.app.json  vite.config.ts
lib/.storybook/: main.ts  preview.ts  tauri-stub.ts  tauri-window-mock.ts  themes.ts
lib/scripts/: bundle-themes.mjs
lib/src/: App.tsx  cfg.ts  globals.d.ts  index.css  main.tsx  theme.css  vite-env.d.ts
scripts/: bump-version.sh  patch-nsis-paths.pl  sign-and-deploy.sh
standalone/: package.json  tsconfig.json  vite.config.ts  vitest.config.ts
standalone/scripts/: dogfood.sh
standalone/sidecar/: clipboard-ops.js  clipboard-ops.test.js  main.js  package.json  pty-core.js  (+1 more)
standalone/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
standalone/src-tauri/capabilities/: default.json
standalone/src-tauri/icons/: icon.icns
standalone/src-tauri/src/: lib.rs  main.rs
vscode-ext/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  vite.config.ts
website/: README.mdx  index.html  package.json  tsconfig.json  vite.config.ts
(+188 files in other folders)
