[package]
name = "mouseterm"
version = "0.9.0"
description = "Mouse-friendly multitasking terminal"
authors = ["DiffPlug"]
license = "FSL-1.1-MIT"
edition = "2021"

[registry]
global-min-publish-age = "14 days"

[lib]
name = "mouseterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
